# MKL-cmake

./: .gitignore  CMakeLists.txt  copy-from-to.cmake  copy-license.cmake  mkl-config.cmake
test/: CMakeLists.txt  main.cpp
